Update font size in footer for mobile screens

--- a/server/templates/layouts/base.html
+++ b/server/templates/layouts/base.html
@@ -72,8 +72,8 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <p class="float-left text-muted text-left">&copy; 2020 Gabor Seljan</p>
-        <p class="float-right text-muted text-right">Version {{ getVersion }}</p>
+        <p class="float-left text-muted text-left copyright"><small>&copy; 2020 Gabor Seljan</small></p>
+        <p class="float-right text-muted text-right version"><small>{{ getVersion }}</small></p>
       </div>
     </footer>
     <script src="/static/js/popper.min.js" type="text/javascript" charset="utf8"></script>
