--- a/server/public/static/css/custom.css
+++ b/server/public/static/css/custom.css
@@ -142,15 +142,6 @@ a.navbar-brand i.fas {
   font-size: 75%;
 }
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  background-color: #f5f5f5;
-}
-
 .fa-play {
   color: green;
 }
@@ -190,6 +181,15 @@ a.navbar-brand i.fas {
   border-top-right-radius: 0;
 }
 
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 59px;
+  background-color: #f5f5f5;
+}
+
 footer .container {
   clear:both;
 }
@@ -197,4 +197,16 @@ footer .container {
 footer .float-right,
 footer .float-left {
   margin:0;
+}
+
+footer .version:before {
+  content: "Version ";
+  font-size: 80%;
+}
+
+@media (max-width: 320px) {
+  footer .version:before {
+    content: "v";
+    font-size: 80%;
+ }
 }
