--- a/server/templates/includes/job_edit.html
+++ b/server/templates/includes/job_edit.html
@@ -22,10 +22,9 @@
         <label for="cores" class="col-md col-form-label">CPU cores</label>
         <div class="col-md">
           <select class="form-control" id="cores" name="cores">
-            <option value="1" {{if (eq .job.Cores 1) }}selected{{end}}>1</option>
-            <option value="2" {{if (eq .job.Cores 2) }}selected{{end}}>2</option>
-            <option value="3" {{if (eq .job.Cores 3) }}selected{{end}}>3</option>
-            <option value="4" {{if (eq .job.Cores 4) }}selected{{end}}>4</option>
+          {{range seq 8}}
+            <option value="{{.}}" {{if (eq $.job.Cores .) }}selected{{end}}>{{.}}</option>
+          {{end}}
           </select>
           <small id="coresHelp" class="form-text text-muted">Enable distributed mode by increasing CPU cores</small>
         </div>
