--- a/server/templates/includes/jobs_view.html
+++ b/server/templates/includes/jobs_view.html
@@ -36,32 +36,32 @@
             </svg>
           </a>
         {{end}}
-          <a id="stopJob" href="/job/{{.GUID}}/stop" class="action stop {{if (eq .Status 0) }}disabled{{end}}" data-method="POST">
+          <a href="/job/{{.GUID}}/stop" class="action stop {{if (eq .Status 0) }}disabled{{end}}" data-method="POST">
             <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="orangered">
               <use xlink:href="/static/svg/bootstrap-icons.svg#stop-fill"/>
             </svg>
           </a>
-          <a id="viewJob" href="/job/{{.GUID}}/view" class="action view {{if (eq .Status 0) }}disabled{{end}}">
+          <a href="/job/{{.GUID}}/view" class="action view {{if (eq .Status 0) }}disabled{{end}}">
             <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="blue">
               <use xlink:href="/static/svg/bootstrap-icons.svg#eye-fill"/>
             </svg>
           </a>
-          <a id="checkJob" href="/job/{{.GUID}}/check" class="action check {{if (eq .Status 0) }}disabled{{end}}" data-method="POST">
+          <a href="/job/{{.GUID}}/check" class="action check {{if (eq .Status 0) }}disabled{{end}}" data-method="POST">
             <svg class="bi" width="1em" height="1em" fill="currentColor" color="grey">
               <use xlink:href="/static/svg/bootstrap-icons.svg#check-circle-fill"/>
             </svg>
           </a>
-          <a id="collectJob" href="/job/{{.GUID}}/collect" class="action collect {{if (eq .Status 0) }}disabled{{end}}" data-method="POST">
+          <a href="/job/{{.GUID}}/collect" class="action collect {{if (eq .Status 0) }}disabled{{end}}" data-method="POST">
             <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="purple">
               <use xlink:href="/static/svg/bootstrap-icons.svg#cloud-arrow-down-fill"/>
             </svg>
           </a>
-          <a id="editJob" href="/job/{{.GUID}}/edit" class="action edit {{if (ne .Status 0) }}disabled{{end}}">
+          <a href="/job/{{.GUID}}/edit" class="action edit {{if (ne .Status 0) }}disabled{{end}}">
             <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="brown">
               <use xlink:href="/static/svg/bootstrap-icons.svg#pencil"/>
             </svg>
           </a>
-          <a id="deleteJob" href="/job/{{.GUID}}" class="action delete {{if (ne .Status 0) }}disabled{{end}}" data-method="DELETE">
+          <a href="/job/{{.GUID}}" class="action delete {{if (ne .Status 0) }}disabled{{end}}" data-method="DELETE">
             <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="red">
               <use xlink:href="/static/svg/bootstrap-icons.svg#trash-fill"/>
             </svg>
