--- a/server/templates/includes/crashes_view.html
+++ b/server/templates/includes/crashes_view.html
@@ -1,3 +1,35 @@
+{{define "verifyCrash"}}
+<a href="/crash/{{.}}/verify" class="float-right action verify" data-method="POST">
+  <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="orangered">
+    <use xlink:href="/static/svg/bootstrap-icons.svg#check-square-fill"/>
+  </svg>
+</a>
+{{end}}
+
+{{define "deleteCrash"}}
+<a href="/crash/{{.}}" class="float-right action delete" data-method="DELETE">
+  <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="red">
+    <use xlink:href="/static/svg/bootstrap-icons.svg#x-square-fill"/>
+  </svg>
+</a>
+{{end}}
+
+{{define "downloadCrash"}}
+<a href="/crash/{{.}}/download" class="float-right action download" data-method="POST">
+  <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="#0074D9">
+    <use xlink:href="/static/svg/bootstrap-icons.svg#arrow-down-square-fill"/>
+  </svg>
+</a>
+{{end}}
+
+{{define "editCrash"}}
+<a href="/crash/{{.}}/edit" class="action edit">
+  <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="brown">
+    <use xlink:href="/static/svg/bootstrap-icons.svg#pencil"/>
+  </svg>
+</a>
+{{end}}
+
 {{define "content"}}
 {{if not .crashes}}
   <p>There are no existing crashes in the database.</p>
@@ -5,10 +37,10 @@
   <div class="card-columns">
   {{range .crashes}}
     <div class="card crash">
-    {{if .Verified }}
       <div class="card-header">
         <small class="id {{ .GetRisk }}">{{ .ID }}</small>
         <h6>
+        {{if .Verified }}
           <a data-toggle="collapse" href="#collapse-{{ .ID }}" aria-controls="collapse-{{ .ID }}" class="d-block collapsed">
             <i class="fas fa-chevron-down float-right"></i>
             {{if .Label }}
@@ -18,9 +50,16 @@
             {{end}}
             <small class="text-muted">{{ .GetJob.Name }}</small>
           </a>
+        {{else}}
+          <span class="label">Unverified crash</span>
+          <small class="text-muted">{{ .GetJob.Name }}</small>
+          {{template "deleteCrash" .GUID}}
+          {{template "downloadCrash" .GUID}}
+          {{template "verifyCrash" .GUID}}
+        {{end}}
         </h6>
       </div>
-
+      {{if .Verified }}
       <div id="collapse-{{ .ID }}" class="collapse collapsed">
         <div class="card-body">
           <small class="card-text">{{ .Description }}</small>
@@ -33,45 +72,12 @@
           </ul>
         </div>
         <div class="card-footer">
-          <a href="/crash/{{.GUID}}/download" class="action download" data-method="POST">
-            <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="#0074D9">
-              <use xlink:href="/static/svg/bootstrap-icons.svg#file-arrow-down-fill"/>
-            </svg>
-          </a>
-          <a href="/crash/{{.GUID}}/edit" class="action edit">
-            <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="brown">
-              <use xlink:href="/static/svg/bootstrap-icons.svg#pencil"/>
-            </svg>
-          </a>
-          <a href="/crash/{{.GUID}}" class="action delete" data-method="DELETE">
-            <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="red">
-              <use xlink:href="/static/svg/bootstrap-icons.svg#trash-fill"/>
-            </svg>
-          </a>
+          {{template "deleteCrash" .GUID}}
+          {{template "editCrash" .GUID}}
+          {{template "downloadCrash" .GUID}}
         </div>
       </div>
-    {{else}}
-      <div class="card-header">
-        <small class="id {{ .GetRisk }}">{{ .ID }}</small>
-        <h6>
-          <span class="label">Unverified crash</span>
-          <small class="text-muted">{{ .GetJob.Name }}</small>
-        </h6>
-      </div>
-      <div class="card-footer">
-        <a id="verifyCrash" href="/crash/{{.GUID}}/verify" class="action verify" data-method="POST">
-          <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="orangered">
-            <use xlink:href="/static/svg/bootstrap-icons.svg#check-square-fill"/>
-          </svg>
-        </a>
-        <a id="deleteCrash" href="/crash/{{.GUID}}" class="action delete" data-method="DELETE">
-          <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="red">
-            <use xlink:href="/static/svg/bootstrap-icons.svg#trash-fill"/>
-          </svg>
-        </a>
-      </div>
-    {{end}}
-
+      {{end}}
     </div>
     {{end}}
   </div>
