Update styling of action buttons

--- a/server/public/static/css/custom.css
+++ b/server/public/static/css/custom.css
@@ -87,7 +87,7 @@ a.navbar-brand i.fas {
 
 .card.crash a.action.float-right {
   margin-top: -2px;
-  padding-left: 0.2em;
+  margin-left: 0.2em;
 }
 
 .card a.action:hover {
