--- a/server/templates/includes/jobs_view.html
+++ b/server/templates/includes/jobs_view.html
@@ -29,12 +29,19 @@
 
       <div class="card-footer">
         {{$ := .}}
+        {{ $break := false }}
         {{range seq .Cores}}
-          <a id="startJob{{.}}" href="/job/{{$.GUID}}/start?fid=fuzzer{{.}}" class="action play play-{{.}} {{if (hasStatus $.Status .) }}disabled{{end}} {{if (eq . $.Cores) }}last{{end}}" data-method="POST">
-            <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="green">
-              <use xlink:href="/static/svg/bootstrap-icons.svg#play-fill"/>
-            </svg>
-          </a>
+          {{ if $break }}
+          {{ else }}
+            {{if not (hasStatus $.Status .) }}
+              {{ $break = true }}
+        <a id="startJob{{.}}" href="/job/{{$.GUID}}/start?fid=fuzzer{{.}}" class="action play play-{{.}} {{if (eq . $.Cores) }}last{{end}}" data-method="POST">
+          <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="green">
+            <use xlink:href="/static/svg/bootstrap-icons.svg#play-fill"/>
+          </svg>
+        </a>
+            {{end}}
+          {{end}}
         {{end}}
           <a href="/job/{{.GUID}}/stop" class="action stop {{if (eq .Status 0) }}disabled{{end}}" data-method="POST">
             <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="orangered">
