Fix download of binary crash samples

--- a/server/templates/includes/crashes_view.html
+++ b/server/templates/includes/crashes_view.html
@@ -15,7 +15,7 @@
 {{end}}
 
 {{define "downloadCrash"}}
-<a href="/crash/{{.}}/download" class="float-right action download" data-method="POST">
+<a href="/crash/{{.}}/download" class="float-right action download" data-type="binary" data-method="POST">
   <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="#0074D9">
     <use xlink:href="/static/svg/bootstrap-icons.svg#arrow-down-square-fill"/>
   </svg>
