Fix user profile update

--- a/server/templates/includes/user_edit.html
+++ b/server/templates/includes/user_edit.html
@@ -8,14 +8,14 @@
       <div class="form-group col-md">
         <label for="firstname" class="col-md col-form-label">First name</label>
         <div class="col-md">
-          <input type="text" class="form-control" name="firstname" id="firstname" placeholder="{{.user.FirstName}}">
+          <input type="text" class="form-control" name="firstname" id="firstname" value="{{.user.FirstName}}">
         </div>
       </div>
 
       <div class="form-group col-md">
         <label for="lastname" class="col-md col-form-label">Last name</label>
         <div class="col-md">
-          <input type="text" class="form-control" name="lastname" id="lastname" placeholder="{{.user.LastName}}">
+          <input type="text" class="form-control" name="lastname" id="lastname" value="{{.user.LastName}}">
         </div>
       </div>
 
