--- a/server/templates/layouts/base.html
+++ b/server/templates/layouts/base.html
@@ -52,6 +52,9 @@
                     </li>
                 </ul>
             </div>
+            <form class="form-inline ml-auto">
+                <input type="search" class="form-control" placeholder="Search" aria-label="Search" id="search">
+            </form>
         </div>
     </nav>
     <main role="main" class="container">
