Add support for sample delivery via shared memory

--- a/server/templates/includes/jobs_create.html
+++ b/server/templates/includes/jobs_create.html
@@ -122,14 +122,13 @@
       </div>
 
       <div class="form-group col-md">
-        <label for="instMode" class="col-md col-form-label">Instrumentation</label>
+        <label for="delivMode" class="col-md col-form-label">Delivery</label>
         <div class="col-md">
-          <select class="form-control" name="inst_mode" id="instMode" disabled>
-            <option>DynamorIO</option>
-            <option>Static</option>
-            <option>Intel PT</option>
+          <select class="form-control" name="deliv_mode" id="delivMode">
+            <option value="">File</option>
+            <option value="sm">Shared memory</option>
           </select>
-          <small id="instModeHelp" class="form-text text-muted">Instrumentation mode to use</small>
+          <small id="delivModeHelp" class="form-text text-muted">Sample delivery mode</small>
         </div>
       </div>
 
@@ -238,6 +237,8 @@
       </div>
     </div>
   </fieldset>
+
+  <input type="hidden" id="inst_mode" name="inst_mode" value="DynamorIO">
 
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
