--- a/server/public/static/css/custom.css
+++ b/server/public/static/css/custom.css
@@ -25,6 +25,10 @@
   main h1 {
     margin-top:1.5rem;
   }
+  .form-inline {
+    width: 100%;
+    margin-top: 6px;
+  }
   .card {
     display: inherit;
   }
