Update job creation form

--- a/server/templates/includes/jobs_create.html
+++ b/server/templates/includes/jobs_create.html
@@ -161,8 +161,8 @@
         <label for="coverageType" class="col-md col-form-label">Coverage type</label>
         <div class="col-md">
           <select class="form-control" name="cov_type" id="coverageType">
-            <option>bb</option>
-            <option>edge</option>
+            <option value="bb">Basic block</option>
+            <option value="edge">Edge</option>
           </select>
           <small id="coverageTypeHelp" class="form-text text-muted">The type of coverage being recorded</small>
         </div>
