--- a/server/templates/includes/jobs_create.html
+++ b/server/templates/includes/jobs_create.html
@@ -134,7 +134,7 @@
 
       <div class="form-group col-md">
         <label for="timeout" class="col-md col-form-label">Timeout</label>
-        <div class="col-sm-10">
+        <div class="col-md">
           <input type="number" class="form-control" name="timeout" id="timeout" aria-describedby="timeoutHelp" placeholder="100000" required>
           <small id="timeoutHelp" class="form-number">Timeout for each run</small>
         </div>
@@ -223,7 +223,8 @@
     <legend>Instrumentation settings</legend>
 
     <div class="form-row">
-      <div class="form-group col-md">
+
+      <div class="form-group col-md-6">
         <label for="coverageModule" class="col-md col-form-label">Coverage module(s)</label>
         <div class="col-md">
           <input type="text" class="form-control" name="cov_module" id="coverageModule" aria-describedby="coverageModuleHelp" placeholder="Enter coverage module(s)">
@@ -300,7 +301,7 @@
       </div>
 
       <div class="form-group col-md">
-        <label for="targetArch">Architecture</label>
+        <label for="targetArch" class="col-md col-form-label">Architecture</label>
         <div class="col-md">
           <select class="form-control" name="target_arch" id="targetArch">
             <option>x86</option>
