--- a/server/templates/includes/jobs_create.html
+++ b/server/templates/includes/jobs_create.html
@@ -220,6 +220,51 @@
   </fieldset>
 
   <fieldset class="form-group">
+    <legend>Environment variables</legend>
+
+    <div class="form-row">
+
+      <div class="form-group col-3">
+        <div class="custom-control custom-switch">
+          <div class="col">
+            <input class="custom-control-input" type="checkbox" name="no_affinity" id="noAffinity" value="1">
+            <label class="custom-control-label" for="noAffinity">No affinity</label>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group col-3">
+        <div class="custom-control custom-switch">
+          <div class="col">
+            <input class="custom-control-input" type="checkbox" name="skip_crashes" id="skipCrashes" value="1">
+            <label class="custom-control-label" for="skipCrashes">Skip crashes</label>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group col-3">
+        <div class="custom-control custom-switch">
+          <div class="col">
+            <input class="custom-control-input" type="checkbox" name="shuffle_queue" id="shuffleQueue" value="1">
+            <label class="custom-control-label" for="shuffleQueue">Shuffle queue</label>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group col-3">
+        <div class="custom-control custom-switch">
+          <div class="col">
+            <input class="custom-control-input" type="checkbox" name="autoresume" id="autoresume" value="1">
+            <label class="custom-control-label" for="autoresume">Autoresume</label>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </fieldset>
+
+  <fieldset class="form-group">
     <legend>Instrumentation settings</legend>
 
     <div class="form-row">
