--- a/server/templates/includes/jobs_create.html
+++ b/server/templates/includes/jobs_create.html
@@ -217,6 +217,19 @@
       </div>
 
     </div>
+
+    <div class="form-row">
+
+      <div class="form-group col-3">
+        <div class="custom-control custom-switch">
+          <div class="col">
+            <input class="custom-control-input" type="checkbox" name="expert_mode" id="expertMode" value="1">
+            <label class="custom-control-label" for="expertMode">Expert mode</label>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </fieldset>
 
   <fieldset class="form-group">
