--- a/server/templates/includes/job_edit.html
+++ b/server/templates/includes/job_edit.html
@@ -177,36 +177,36 @@
 
     <div class="form-row">
 
-      <div class="form-group col-md">
+      <div class="form-group col-3">
         <div class="custom-control custom-switch">
-          <div class="col-md">
+          <div class="col">
             <input class="custom-control-input" type="checkbox" name="dirty_mode" id="dirtyMode" value="1" {{ if eq .job.DirtyMode 1}}checked{{end}}>
             <label class="custom-control-label" for="dirtyMode">Quick & dirty mode</label>
           </div>
         </div>
       </div>
 
-      <div class="form-group col-md">
+      <div class="form-group col-3">
         <div class="custom-control custom-switch">
-          <div class="col-md">
+          <div class="col">
             <input class="custom-control-input" type="checkbox" name="dumb_mode" id="dumbMode" value="1" {{ if eq .job.DumbMode 1}}checked{{end}}>
             <label class="custom-control-label" for="dumbMode">Without instrumentation</label>
           </div>
         </div>
       </div>
 
-      <div class="form-group col-md">
+      <div class="form-group col-3">
         <div class="custom-control custom-switch">
-          <div class="col-md">
+          <div class="col">
             <input class="custom-control-input" type="checkbox" name="crash_mode" id="crashMode" value="1" {{ if eq .job.CrashMode 1}}checked{{end}}>
             <label class="custom-control-label" for="crashMode">Crash exploration mode</label>
           </div>
         </div>
       </div>
 
-      <div class="form-group col-md">
+      <div class="form-group col-3">
         <div class="custom-control custom-switch">
-          <div class="col-md">
+          <div class="col">
             <input class="custom-control-input" type="checkbox" name="persist_cache" id="persistCache" value="1" {{if eq .job.PersistCache 1}}checked{{end}}>
             <label class="custom-control-label" for="persistCache">Persist DynamoRIO cache</label>
           </div>
