Update type of fID to integer

--- a/server/templates/includes/job_view.html
+++ b/server/templates/includes/job_view.html
@@ -109,12 +109,12 @@
         </div>
       </div>
       <div class="card-footer">
-        <a href="/job/{{.GetJob.GUID}}/check?fid={{.AFLBanner}}" class="action check" data-method="POST">
+        <a href="/job/{{.GetJob.GUID}}/check?fid={{.GetFID}}" class="action check" data-method="POST">
           <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="grey">
             <use xlink:href="/static/svg/bootstrap-icons.svg#check-circle-fill"/>
           </svg>
         </a>
-        <a href="/job/{{.GetJob.GUID}}/plot?fid={{.AFLBanner}}" class="action plot" data-method="POST">
+        <a href="/job/{{.GetJob.GUID}}/plot?fid={{.GetFID}}" class="action plot" data-method="POST">
           <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="green">
             <use xlink:href="/static/svg/bootstrap-icons.svg#bar-chart-fill"/>
           </svg>
