--- a/server/templates/includes/jobs_view.html
+++ b/server/templates/includes/jobs_view.html
@@ -35,7 +35,7 @@
           {{ else }}
             {{if not (hasStatus $.Status .) }}
               {{ $break = true }}
-        <a id="startJob{{.}}" href="/job/{{$.GUID}}/start?fid={{.}}" class="action play play-{{.}} {{if (eq . $.Cores) }}last{{end}}" data-method="POST">
+        <a id="startJob{{.}}" href="/job/{{$.GUID}}/start?fid={{.}}" class="btn btn-outline-secondary action play play-{{.}} {{if (eq . $.Cores) }}last{{end}}" data-method="POST">
           <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="green">
             <use xlink:href="/static/svg/bootstrap-icons.svg#play-fill"/>
           </svg>
@@ -43,32 +43,32 @@
             {{end}}
           {{end}}
         {{end}}
-          <a href="/job/{{.GUID}}/stop" class="action stop {{if (eq .Status 0) }}disabled{{end}}" data-method="POST">
+          <a href="/job/{{.GUID}}/stop" class="btn btn-outline-secondary action stop {{if (eq .Status 0) }}disabled{{end}}" data-method="POST">
             <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="orangered">
               <use xlink:href="/static/svg/bootstrap-icons.svg#stop-fill"/>
             </svg>
           </a>
-          <a href="/job/{{.GUID}}/view" class="action view {{if (eq .Status 0) }}disabled{{end}}">
+          <a href="/job/{{.GUID}}/view" class="btn btn-outline-secondary action view {{if (eq .Status 0) }}disabled{{end}}">
             <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="blue">
               <use xlink:href="/static/svg/bootstrap-icons.svg#eye-fill"/>
             </svg>
           </a>
-          <a href="/job/{{.GUID}}/check" class="action check {{if (eq .Status 0) }}disabled{{end}}" data-method="POST">
+          <a href="/job/{{.GUID}}/check" class="btn btn-outline-secondary action check {{if (eq .Status 0) }}disabled{{end}}" data-method="POST">
             <svg class="bi" width="1em" height="1em" fill="currentColor" color="grey">
               <use xlink:href="/static/svg/bootstrap-icons.svg#check-circle-fill"/>
             </svg>
           </a>
-          <a href="/job/{{.GUID}}/collect" class="action collect {{if (eq .Status 0) }}disabled{{end}}" data-method="POST">
+          <a href="/job/{{.GUID}}/collect" class="btn btn-outline-secondary action collect {{if (eq .Status 0) }}disabled{{end}}" data-method="POST">
             <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="purple">
               <use xlink:href="/static/svg/bootstrap-icons.svg#cloud-arrow-down-fill"/>
             </svg>
           </a>
-          <a href="/job/{{.GUID}}/edit" class="action edit {{if (ne .Status 0) }}disabled{{end}}">
+          <a href="/job/{{.GUID}}/edit" class="btn btn-outline-secondary action edit {{if (ne .Status 0) }}disabled{{end}}">
             <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="brown">
               <use xlink:href="/static/svg/bootstrap-icons.svg#pencil"/>
             </svg>
           </a>
-          <a href="/job/{{.GUID}}" class="action delete {{if (ne .Status 0) }}disabled{{end}}" data-method="DELETE">
+          <a href="/job/{{.GUID}}" class="btn btn-outline-secondary action delete {{if (ne .Status 0) }}disabled{{end}}" data-method="DELETE">
             <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="red">
               <use xlink:href="/static/svg/bootstrap-icons.svg#trash-fill"/>
             </svg>
