--- a/server/templates/layouts/base.html
+++ b/server/templates/layouts/base.html
@@ -36,6 +36,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Jobs</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item" href="/jobs/create">Create</a>
+                            <a class="dropdown-item" href="/jobs/upload">Upload</a>
                             <a class="dropdown-item" href="/jobs/view">View</a>
                         </div>
                     </li>
