Add periodic email alerts of new crashes

--- a/server/templates/includes/user_edit.html
+++ b/server/templates/includes/user_edit.html
@@ -19,13 +19,27 @@
         </div>
       </div>
 
+    </div>
+
+    <div class="form-row">
+
       <div class="form-group col-md">
         <label for="username" class="col-md col-form-label">Username</label>
         <div class="col-md">
           <input type="text" class="form-control" name="username" id="username" placeholder="{{.user.UserName}}" disabled>
         </div>
       </div>
+
+      <div class="form-group col-md">
+        <label for="email" class="col-md col-form-label">Email address</label>
+        <div class="col-md">
+          <input type="text" class="form-control" name="email" id="email" placeholder="{{.user.Email}}">
+        </div>
+      </div>
+
     </div>
+
+  </div>
   </fieldset>
 
   <fieldset class="form-group">
