--- a/server/templates/includes/jobs_view.html
+++ b/server/templates/includes/jobs_view.html
@@ -63,6 +63,13 @@
               <use xlink:href="/static/svg/bootstrap-icons.svg#cloud-arrow-down-fill"/>
             </svg>
           </a>
+          {{if not (.HasAlert) }}
+          <a href="/job/{{.GUID}}/alert" class="btn btn-outline-secondary action alarm {{if (eq .Status 0) }}disabled{{end}}" data-method="POST">
+            <svg class="bi" width="1.15em" height="1.15em" fill="currentColor" color="green">
+              <use xlink:href="/static/svg/bootstrap-icons.svg#alarm-fill"/>
+            </svg>
+          </a>
+          {{end}}
           <a href="/job/{{.GUID}}/download" class="action download">
             <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="#e67e22">
               <use xlink:href="/static/svg/bootstrap-icons.svg#download"/>
