Fix download button style

--- a/server/templates/includes/jobs_view.html
+++ b/server/templates/includes/jobs_view.html
@@ -70,7 +70,7 @@
             </svg>
           </a>
           {{end}}
-          <a href="/job/{{.GUID}}/download" class="action download">
+          <a href="/job/{{.GUID}}/download" class="btn btn-outline-secondary action download">
             <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="#e67e22">
               <use xlink:href="/static/svg/bootstrap-icons.svg#download"/>
             </svg>
