Add variable mode to allow for varying parameters

--- a/server/templates/includes/jobs_create.html
+++ b/server/templates/includes/jobs_create.html
@@ -229,6 +229,15 @@
         </div>
       </div>
 
+      <div class="form-group col-3">
+        <div class="custom-control custom-switch">
+          <div class="col">
+            <input class="custom-control-input" type="checkbox" name="variable_mode" id="variableMode" value="1">
+            <label class="custom-control-label" for="variableMode">Variable mode</label>
+          </div>
+        </div>
+      </div>
+
     </div>
   </fieldset>
 
