--- a/server/templates/includes/jobs_create.html
+++ b/server/templates/includes/jobs_create.html
@@ -241,6 +241,15 @@
       <div class="form-group col-3">
         <div class="custom-control custom-switch">
           <div class="col">
+            <input class="custom-control-input" type="checkbox" name="sequential_mode" id="sequentialMode" value="1">
+            <label class="custom-control-label" for="sequentialMode">Sequential mode</label>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group col-3">
+        <div class="custom-control custom-switch">
+          <div class="col">
             <input class="custom-control-input" type="checkbox" name="bug_bucket" id="bugBucket" value="1">
             <label class="custom-control-label" for="bugBucket">Bug bucket</label>
           </div>
